# nm-monitor

./: --help  .cursorrules  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DBUS_BLOCKCHAIN.md  DEBUG_SESSION.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  JSON_STANDARDIZATION_PLAN.md  QUICK_REFERENCE.md  QUICK_START_NETWORK_PLUGIN.md  README.md  RECOVERY.md  REFACTORING_PHASE2_REPORT.md  REFACTORING_REPORT.md  REFACTOR_COMPLETE.md  REFACTOR_RULES.md  RULES.md  RUST_SYSTEMD_ANALYSIS.md  STATUS.md  SYSTEMD_LIBRARIES_COMPARISON.md  agent-try.md  atomic_fix.sh  benchmark_ledger_simple.sh  bring-ovs-up.sh  claude.txt  clean_slate_atomic_demo.sh  clean_slate_test.sh  correct_systemd_ovs_config.yaml  corrected_nm_config.yaml  corrected_nm_config_simple.yaml  cursor_verification_failure_with_ovs_po.md  delete.yml  demo_without_ledger.rs  deploy.sh  dhcp_bridge_setup.sh  (+45 more)
.zencoder/: ARCHITECTURE_REVIEW.md  QUICK_FIXES.md  REVIEW_SUMMARY.md
agents/: warp-agent-registry.md
config/: config.json.example  config.toml.example  config.toml.json  network-ens1-dhcp.json  ovsbr0-install.yaml  ovsbr0-working.yaml
dbus/: dev.ovs.PortAgent1.conf  org.openvswitch.ovsdb.conf  org.system.introspection.conf
docs/: DBUS_ARCHITECTURE.md  NETWORKMANAGER-VS-SYSTEMD.md  NETWORK_COMPONENTS_INTERACTION_GUIDE.md  NETWORK_PLUGIN_GUIDE.md  NetworkManager_Compliance.md  OVERVIEW.md  OVSDB_DBUS_INTEGRATION.md  OVSDB_TECHNICAL.md  RUST-VS-PYTHON.md  STATE_MANAGER_ARCHITECTURE.md
k8s/: deployment.yaml
monitoring/: prometheus.yml
nm-monitor/: Cargo.toml
scripts/: TROUBLESHOOTING.md  activate_ovs_bridge.sh  add_secondary_ip.sh  check-network-status.sh  check_network_safety.sh  cleanup-persistent-connections.sh  cleanup-server.sh  compare_nm_syntax.sh  create-production-bridges.sh  create-systemd-bridges.sh  create_ovs_atomic.sh  diagnose_ovs_bridge.sh  (+35 more)
(+130 files in other folders)
