[package]
name = "ovs-port-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
log = "0.4"
systemd-journal-logger = "2"
env_logger = "0.11"
sha1 = "0.10"
hex = "0.4"
regex = "1"
which = "6"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
zbus = { version = "3", features = ["tokio"] }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
